Initial Views and navigation (so far no ViewModel)
Related Work Items: #19

--- a/SurveyAnswererApp/SurveyAnswererApp/SurveyAnswererApp.csproj
+++ b/SurveyAnswererApp/SurveyAnswererApp/SurveyAnswererApp.csproj
@@ -14,4 +14,43 @@
     <PackageReference Include="Xamarin.Forms" Version="4.4.0.991265" />  
     <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Views\HistoryListPage.xaml.cs">
+      <DependentUpon>HistoryListPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Update="Views\HistoryDetailPage.xaml.cs">
+      <DependentUpon>HistoryDetailPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Update="Views\MainTabNavPage.xaml.cs">
+      <DependentUpon>MainTabNavPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Update="Views\SurveyDetailPage.xaml.cs">
+      <DependentUpon>SurveyDetailPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Update="Views\SurveyListPage.xaml.cs">
+      <DependentUpon>SurveyListPage.xaml</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Views\MainTabNavPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\QuestionnairePage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\QuestionnaireSendSuccessPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\QuestionnaireSummaryPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\SurveyDetailPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\SurveyListPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+  </ItemGroup>
 </Project>
