Set Bundle identifier for mobile packages

--- a/SurveyAnswererApp/SurveyAnswererApp.iOS/SurveyAnswererApp.iOS.csproj
+++ b/SurveyAnswererApp/SurveyAnswererApp.iOS/SurveyAnswererApp.iOS.csproj
@@ -65,6 +65,9 @@
   <PropertyGroup Condition=" '$(RunConfiguration)' == 'Default' ">
     <AppExtensionDebugBundleId />
   </PropertyGroup>
+  <PropertyGroup>
+    <NoWin32Manifest>true</NoWin32Manifest>
+  </PropertyGroup>
   <ItemGroup>
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
