--- a/SurveyAnswererApp/SurveyAnswererApp.Android/SurveyAnswererApp.Android.csproj
+++ b/SurveyAnswererApp/SurveyAnswererApp.Android/SurveyAnswererApp.Android.csproj
@@ -54,6 +54,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Syncfusion.Xamarin.Buttons">
+      <Version>18.1.0.46</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="4.4.0.991265" />
     <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
   </ItemGroup>
