--- a/SurveyAnswererApp/SurveyAnswererApp.iOS/SurveyAnswererApp.iOS.csproj
+++ b/SurveyAnswererApp/SurveyAnswererApp.iOS/SurveyAnswererApp.iOS.csproj
@@ -51,6 +51,7 @@
     <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
     <MtouchLink>None</MtouchLink>
     <MtouchInterpreter>-all</MtouchInterpreter>
+    <MtouchExtraArgs> --interpreter</MtouchExtraArgs>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|iPhone' ">
     <DebugType>none</DebugType>
