--- a/SurveyAnswererApp/SurveyAnswererApp.Android/SurveyAnswererApp.Android.csproj
+++ b/SurveyAnswererApp/SurveyAnswererApp.Android/SurveyAnswererApp.Android.csproj
@@ -92,5 +92,11 @@
       <Name>SurveyAnswererApp</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\tab_feed.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\tab_about.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
